k8s/environments/qa/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grupoX-qa   # <-- reemplazar "grupoX" por el número real de su grupo
